--- a/LocadoraOleTraining/LocadoraOleTraining/Base.lproj/Main.storyboard
+++ b/LocadoraOleTraining/LocadoraOleTraining/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YCo-xf-LWL">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,6 +12,9 @@
     <customFonts key="customFonts">
         <array key="Dosis-Bold.otf">
             <string>Dosis-Bold</string>
+        </array>
+        <array key="Roboto-Regular.ttf">
+            <string>Roboto-Regular</string>
         </array>
     </customFonts>
     <scenes>
@@ -162,8 +165,26 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="suh-W3-bWd" userLabel="Stack View Nome">
+                                                <rect key="frame" x="0.0" y="256" width="289" height="8"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="     Nome inválido" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jlQ-qx-Whx">
+                                                        <rect key="frame" x="0.0" y="0.0" width="239" height="8"/>
+                                                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="7"/>
+                                                        <color key="textColor" red="0.95686274509803915" green="0.2627450980392157" blue="0.21176470588235294" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="alertIcon" translatesAutoresizingMaskIntoConstraints="NO" id="2hB-oT-nuO">
+                                                        <rect key="frame" x="239" y="0.0" width="50" height="8"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="50" id="Q2Z-yG-ytC"/>
+                                                            <constraint firstAttribute="height" constant="8" id="i95-ux-m4I"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                </subviews>
+                                            </stackView>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nome de usuário" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O1I-la-6kD">
-                                                <rect key="frame" x="0.0" y="256" width="289" height="50"/>
+                                                <rect key="frame" x="0.0" y="270" width="289" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="9Oj-ty-Dog"/>
                                                 </constraints>
@@ -171,8 +192,26 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="ckz-X5-NeI" userLabel="Stack View Usuario">
+                                                <rect key="frame" x="0.0" y="326" width="289" height="8"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="     Nome de usuário obrigatório" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nM4-F7-eiY">
+                                                        <rect key="frame" x="0.0" y="0.0" width="239" height="8"/>
+                                                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="7"/>
+                                                        <color key="textColor" red="0.95686274510000002" green="0.26274509800000001" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="alertIcon" translatesAutoresizingMaskIntoConstraints="NO" id="A9i-im-WbB">
+                                                        <rect key="frame" x="239" y="0.0" width="50" height="8"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="50" id="byq-Pw-g0E"/>
+                                                            <constraint firstAttribute="height" constant="8" id="qYl-yt-zP9"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                </subviews>
+                                            </stackView>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Senha" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0y0-LH-dCd">
-                                                <rect key="frame" x="0.0" y="312" width="289" height="50"/>
+                                                <rect key="frame" x="0.0" y="340" width="289" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="Z3p-hK-dum"/>
                                                 </constraints>
@@ -180,8 +219,26 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                             </textField>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="ApO-rL-qDi" userLabel="Stack View Senha">
+                                                <rect key="frame" x="0.0" y="396" width="289" height="8"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="     Senha inválida" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tmi-ou-ELz">
+                                                        <rect key="frame" x="0.0" y="0.0" width="239" height="8"/>
+                                                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="7"/>
+                                                        <color key="textColor" red="0.95686274510000002" green="0.26274509800000001" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="alertIcon" translatesAutoresizingMaskIntoConstraints="NO" id="EmP-84-aZl">
+                                                        <rect key="frame" x="239" y="0.0" width="50" height="8"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="8" id="UC7-iK-KEc"/>
+                                                            <constraint firstAttribute="width" constant="50" id="j1u-Ca-CiR"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                </subviews>
+                                            </stackView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fzq-9O-B2O">
-                                                <rect key="frame" x="0.0" y="368" width="289" height="106"/>
+                                                <rect key="frame" x="0.0" y="410" width="289" height="64"/>
                                                 <color key="backgroundColor" red="0.96078431369999995" green="0.96470588239999999" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Xn-qY-Ymb">
@@ -234,6 +291,9 @@
                         <outlet property="ButtonAvancar" destination="9Xn-qY-Ymb" id="5le-8h-Qk3"/>
                         <outlet property="LabelEmail" destination="Jn5-Xa-svL" id="Upa-66-Pzq"/>
                         <outlet property="LabelTitulo" destination="rKh-Dj-dJp" id="HGt-pp-YHO"/>
+                        <outlet property="stackViewNomeCompleto" destination="suh-W3-bWd" id="1YU-Q4-5c9"/>
+                        <outlet property="stackViewNomeUsuario" destination="ckz-X5-NeI" id="8gZ-F9-AKA"/>
+                        <outlet property="stackViewSenha" destination="ApO-rL-qDi" id="wBy-u2-Drz"/>
                         <outletCollection property="CamposTextField" destination="fLg-a4-qko" collectionClass="NSMutableArray" id="pqf-hI-wPL"/>
                         <outletCollection property="CamposTextField" destination="O1I-la-6kD" collectionClass="NSMutableArray" id="0Yc-og-EE5"/>
                         <outletCollection property="CamposTextField" destination="0y0-LH-dCd" collectionClass="NSMutableArray" id="KEv-Ck-wPF"/>
@@ -244,4 +304,7 @@
             <point key="canvasLocation" x="893.60000000000002" y="117.39130434782609"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="alertIcon" width="296" height="171"/>
+    </resources>
 </document>
