Confguração do ambiente de requisição de serviço usando json-server

--- a/LocadoraOleTraining/LocadoraOleTraining/Base.lproj/Main.storyboard
+++ b/LocadoraOleTraining/LocadoraOleTraining/Base.lproj/Main.storyboard
@@ -388,7 +388,7 @@
                                         </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                        <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="DeV-vW-MeM" userLabel="Stack View Email">
                                         <rect key="frame" x="43" y="319" width="288" height="8"/>
@@ -538,7 +538,7 @@
                                         </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                        <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="UCC-GQ-A0p" userLabel="Stack View Email">
                                         <rect key="frame" x="42" y="319" width="288" height="8"/>
