--- a/LocadoraOleTraining/LocadoraOleTraining/Base.lproj/Main.storyboard
+++ b/LocadoraOleTraining/LocadoraOleTraining/Base.lproj/Main.storyboard
@@ -1000,7 +1000,7 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="P0k-wt-D4w">
-                                        <rect key="frame" x="48" y="60" width="279" height="571"/>
+                                        <rect key="frame" x="48" y="60" width="279" height="560"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="PARA SUA SEGURANÇA, INFORME O CÓDIGO ENVIADO PARA O SEU E-MAL:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OqD-ve-iO3">
                                                 <rect key="frame" x="0.0" y="0.0" width="279" height="80"/>
@@ -1021,11 +1021,11 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d2Y-oj-ha1">
-                                                <rect key="frame" x="0.0" y="105" width="279" height="50"/>
+                                                <rect key="frame" x="0.0" y="105" width="279" height="100"/>
                                                 <color key="backgroundColor" red="0.96078431369999995" green="0.96470588239999999" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                             </view>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Token de validação" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2cS-1P-04t">
-                                                <rect key="frame" x="0.0" y="159" width="279" height="50"/>
+                                                <rect key="frame" x="0.0" y="209" width="279" height="50"/>
                                                 <color key="backgroundColor" red="0.96078431369999995" green="0.96470588239999999" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="QpT-9s-EfL"/>
@@ -1035,7 +1035,7 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="And-rG-dyc" userLabel="Stack View Email">
-                                                <rect key="frame" x="0.0" y="213" width="279" height="8"/>
+                                                <rect key="frame" x="0.0" y="263" width="279" height="8"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="     Token inválido" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="br5-ck-JhL">
                                                         <rect key="frame" x="0.0" y="0.0" width="229" height="8"/>
@@ -1053,7 +1053,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sTJ-1d-vA9">
-                                                <rect key="frame" x="0.0" y="225" width="279" height="27"/>
+                                                <rect key="frame" x="0.0" y="275" width="279" height="27"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Não recebeu o código?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uJR-ns-W7H">
                                                         <rect key="frame" x="0.0" y="0.0" width="123" height="27"/>
@@ -1091,12 +1091,8 @@
                                                     </stackView>
                                                 </subviews>
                                             </stackView>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FAw-L1-Miy">
-                                                <rect key="frame" x="0.0" y="256" width="279" height="57"/>
-                                                <color key="backgroundColor" red="0.96078431369999995" green="0.96470588239999999" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                                            </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Crie sua nova senha" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aIf-9K-pc4">
-                                                <rect key="frame" x="0.0" y="317" width="279" height="45"/>
+                                                <rect key="frame" x="0.0" y="306" width="279" height="45"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="45" id="3nf-go-9jY"/>
                                                 </constraints>
@@ -1105,7 +1101,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nova senha" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uGy-Nk-1MF">
-                                                <rect key="frame" x="0.0" y="366" width="279" height="50"/>
+                                                <rect key="frame" x="0.0" y="355" width="279" height="50"/>
                                                 <color key="backgroundColor" red="0.96078431369999995" green="0.96470588239999999" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="uId-8l-buM"/>
@@ -1115,7 +1111,7 @@
                                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                             </textField>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="kjG-SU-7Fs" userLabel="Stack View Email">
-                                                <rect key="frame" x="0.0" y="420" width="279" height="8"/>
+                                                <rect key="frame" x="0.0" y="409" width="279" height="8"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="     Senha inválida" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ris-Xd-NXk">
                                                         <rect key="frame" x="0.0" y="0.0" width="229" height="8"/>
@@ -1133,7 +1129,7 @@
                                                 </subviews>
                                             </stackView>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirme sua senha" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dZz-Nd-Ley">
-                                                <rect key="frame" x="0.0" y="432" width="279" height="50"/>
+                                                <rect key="frame" x="0.0" y="421" width="279" height="50"/>
                                                 <color key="backgroundColor" red="0.96078431369999995" green="0.96470588239999999" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="BaN-Rs-Zne"/>
@@ -1143,7 +1139,7 @@
                                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                             </textField>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="L1b-bt-1Zx" userLabel="Stack View Email">
-                                                <rect key="frame" x="0.0" y="486" width="279" height="8"/>
+                                                <rect key="frame" x="0.0" y="475" width="279" height="8"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="     Confirmação de senha inválida" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rbD-RB-lMj">
                                                         <rect key="frame" x="0.0" y="0.0" width="229" height="8"/>
@@ -1160,12 +1156,12 @@
                                                     </imageView>
                                                 </subviews>
                                             </stackView>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XH8-bx-qsi">
-                                                <rect key="frame" x="0.0" y="498" width="279" height="0.0"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M3q-jd-bIV">
+                                                <rect key="frame" x="0.0" y="487" width="279" height="0.0"/>
                                                 <color key="backgroundColor" red="0.96078431369999995" green="0.96470588239999999" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                             </view>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="syc-Wh-Z1R">
-                                                <rect key="frame" x="0.0" y="502" width="279" height="45"/>
+                                                <rect key="frame" x="0.0" y="491" width="279" height="45"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8dY-pb-5sP" customClass="RoundedButton" customModule="LocadoraOleTraining" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="259" height="45"/>
@@ -1191,7 +1187,7 @@
                                                 </subviews>
                                             </stackView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M1u-Qw-Rgr">
-                                                <rect key="frame" x="0.0" y="551" width="279" height="20"/>
+                                                <rect key="frame" x="0.0" y="540" width="279" height="20"/>
                                                 <color key="backgroundColor" red="0.96078431369999995" green="0.96470588239999999" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="s0s-pa-ufi"/>
@@ -1201,20 +1197,17 @@
                                         <color key="backgroundColor" red="0.96078431369999995" green="0.96470588239999999" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstItem="syc-Wh-Z1R" firstAttribute="top" secondItem="L1b-bt-1Zx" secondAttribute="bottom" constant="8" symbolic="YES" id="DUJ-Wg-5Uk"/>
-                                            <constraint firstAttribute="height" constant="571" id="hwh-uy-83m"/>
-                                            <constraint firstItem="2cS-1P-04t" firstAttribute="top" secondItem="P0k-wt-D4w" secondAttribute="top" constant="159" id="t4m-BM-2Rl"/>
+                                            <constraint firstItem="2cS-1P-04t" firstAttribute="top" secondItem="OqD-ve-iO3" secondAttribute="bottom" constant="129" id="HKa-cb-Zks"/>
                                         </constraints>
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.96078431369999995" green="0.96470588239999999" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="P0k-wt-D4w" firstAttribute="centerX" secondItem="j7F-l5-ASF" secondAttribute="centerX" id="3bN-ds-6cn"/>
-                                    <constraint firstAttribute="trailing" secondItem="P0k-wt-D4w" secondAttribute="trailing" constant="38" id="57Z-SS-psL"/>
-                                    <constraint firstItem="aIf-9K-pc4" firstAttribute="top" secondItem="j7F-l5-ASF" secondAttribute="top" constant="377" id="H8P-SR-Pgq"/>
+                                    <constraint firstAttribute="trailing" secondItem="P0k-wt-D4w" secondAttribute="trailing" constant="48" id="57Z-SS-psL"/>
                                     <constraint firstItem="P0k-wt-D4w" firstAttribute="leading" secondItem="j7F-l5-ASF" secondAttribute="leading" constant="48" id="KXL-zn-hIS"/>
-                                    <constraint firstAttribute="bottom" secondItem="P0k-wt-D4w" secondAttribute="bottom" constant="16" id="b0B-0W-sz2"/>
                                     <constraint firstItem="P0k-wt-D4w" firstAttribute="top" secondItem="j7F-l5-ASF" secondAttribute="top" constant="60" id="bxR-Pm-z2S"/>
-                                    <constraint firstAttribute="bottom" secondItem="M1u-Qw-Rgr" secondAttribute="bottom" constant="16" id="e30-hT-59R"/>
+                                    <constraint firstAttribute="bottom" secondItem="M1u-Qw-Rgr" secondAttribute="bottom" constant="27" id="gTl-gk-Yck"/>
                                 </constraints>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Id-zl-pVs">
@@ -1233,9 +1226,9 @@
                         <constraints>
                             <constraint firstItem="j7F-l5-ASF" firstAttribute="top" secondItem="SCz-Ku-KmW" secondAttribute="top" id="6av-tR-Yhl"/>
                             <constraint firstItem="j7F-l5-ASF" firstAttribute="trailing" secondItem="4Xg-jA-j5r" secondAttribute="trailing" id="9PU-xc-qJE"/>
-                            <constraint firstItem="M1u-Qw-Rgr" firstAttribute="top" secondItem="SCz-Ku-KmW" secondAttribute="bottom" constant="-36" id="Hfm-3z-4od"/>
                             <constraint firstItem="j7F-l5-ASF" firstAttribute="leading" secondItem="4Xg-jA-j5r" secondAttribute="leading" id="Rqv-lv-mYv"/>
-                            <constraint firstAttribute="bottom" secondItem="j7F-l5-ASF" secondAttribute="bottom" id="gWq-E0-Lr4"/>
+                            <constraint firstAttribute="bottom" secondItem="j7F-l5-ASF" secondAttribute="bottom" id="hxq-ef-Zpa"/>
+                            <constraint firstItem="M1u-Qw-Rgr" firstAttribute="top" secondItem="SCz-Ku-KmW" secondAttribute="bottom" constant="-47" id="k5o-O0-gBJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SCz-Ku-KmW"/>
                     </view>
@@ -1258,7 +1251,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AYU-hv-3lZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4852" y="121"/>
+            <point key="canvasLocation" x="4850.3999999999996" y="120.08995502248877"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="jSj-SI-yfa">
